--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "iconv-lite": "^0.4.24",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "resize-sensor": "0.0.6",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
